add all changes#

--- a/nimapinfoteckTask/appsettings.json
+++ b/nimapinfoteckTask/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "taskdb": "server=DESKTOP-PUU4VC0\\SQLEXPRESS;database=taskdb;integrated security=true;"
+  },
   "AllowedHosts": "*"
 }
